add create todo component. Use useCallback hook

--- a/src/components/todos/todo.style.scss
+++ b/src/components/todos/todo.style.scss
@@ -13,6 +13,19 @@
     margin-top: 109px;
 }
 
+h1 {
+    width: 100px;
+    height: 28px;
+    margin: 25px 72.5px 20px 0.5px;
+    font-size: 22px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #1f2a4b;
+}
+
 .footer-label {
     width: 42px;
     height: 18px;
