filter button styling

--- a/src/components/footer/footer.style.scss
+++ b/src/components/footer/footer.style.scss
@@ -10,3 +10,9 @@
     letter-spacing: normal;
     color: rgba(31, 42, 75, 0.59);
 }
+
+.css-1e6y48t-MuiButtonBase-root-MuiButton-root {
+    font-size: 12px !important;
+    min-width: 0px !important;
+    padding: 6px 0px !important;
+}
