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

--- a/src/components/todo-list/todo-list.style.scss
+++ b/src/components/todo-list/todo-list.style.scss
@@ -8,6 +8,6 @@
     flex-direction: row !important;
 }
 
-.css-78trlr-MuiButtonBase-root-MuiIconButton-root { 
-    margin: auto !important;
+.check-label {
+    width: 90%;
 }
